--- a/app/views/studies/_form.html.haml
+++ b/app/views/studies/_form.html.haml
@@ -4,6 +4,14 @@
   = f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present?
 
   .form-inputs
+    = f.input :id
+    = f.input :study_name
+    = f.input :stage
+    = f.input :type
+    = f.input :notes
+    = f.input :lead_manager
+    = f.input :backup_manager
+
 
   .form-actions
     = f.button :submit
