added scaffold for tasks_list and designed it

--- a/app/views/studies/_form.html.haml
+++ b/app/views/studies/_form.html.haml
@@ -11,6 +11,8 @@
     = f.input :notes
     = f.input :lead_manager
     = f.input :backup_manager
+    = f.input :start_date
+    = f.input :lplv
 
 
   .form-actions
