Study Hours Timeline Page added

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -8,7 +8,7 @@
     = link_to 'Click', 'studies'
   %p
     Getting Study Hours Timeline
-    = link_to 'Not available yet', 'https://fontawesome.com/icons?d=gallery&m=free'
+    = link_to 'Click', 'study_hours_timeline'
     for icons.
     %p
     Getting Reports
@@ -16,6 +16,10 @@
     for icons.
     %p
     Getting Allocation
+    = link_to 'Not available yet', 'https://fontawesome.com/icons?d=gallery&m=free'
+    for icons.
+    %p
+    Manage Data Managers
     = link_to 'Not available yet', 'https://fontawesome.com/icons?d=gallery&m=free'
     for icons.
 
