--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -47,10 +47,10 @@
               - if user_signed_in?
                 %ul.nav.navbar-nav.ml-auto
                   %li.nav-item.dropdown
-                    = link_to '#', aria: { haspopup: true, expanded: false }, data: { toggle: :dropdown }, id: 'navbar-user-link', class: 'nav-link dropdown-toggle', role: 'button' do
-                      = icon 'fas', 'user', current_user.email
+                    = link_to '#', aria: { haspopup: true, expanded: false }, data: { toggle: :dropdown }, id: 'navbar-users-link', class: 'nav-link dropdown-toggle', role: 'button' do
+                      = icon 'fas', 'users', current_user.email
                       %b.caret
-                    .dropdown-menu{ aria: { labelledby: '#navbar-user-link' } }
+                    .dropdown-menu{ aria: { labelledby: '#navbar-users-link' } }
                       = link_to destroy_user_session_path, class: 'dropdown-item', method: :delete, title: "Log out of the system" do
                         = icon 'fas', 'sign-out-alt', 'Log out'
 
