--- a/app/views/studies/index.html.haml
+++ b/app/views/studies/index.html.haml
@@ -34,7 +34,7 @@
         %td= link_to 'Show', study
         %td= link_to 'Edit', edit_study_path(study)
         %td= link_to 'Destroy', study, method: :delete, data: { confirm: 'Are you sure?' }
-        %td= link_to 'Show Tasks', study_tasks_path(StudyTask.where(study_id: study.id))
+        %td= link_to 'Show Tasks', study_tasks_path(StudyTask.where(study_id: study.study_id))
 
 
         = simple_form_for :search, url: search_studies_path, method: :post do |f|
