Updated Study Hours Timeline Page

--- a/app/views/studies/study_hours_timeline.html.haml
+++ b/app/views/studies/study_hours_timeline.html.haml
@@ -5,20 +5,47 @@
       %th Name
       %th Lead Manager
       %th Backup Manager
-      %th January
-      %th February
-      %th March
-      %th April
-      %th May
-      %th June
-      %th July
-      %th August
-      %th September
-      %th October
-      %th November
-      %th Decemmber
-
-
+      %th{:colspan => 2} January
+      %th{:colspan => 2} February
+      %th{:colspan => 2} March
+      %th{:colspan => 2} April
+      %th{:colspan => 2} May
+      %th{:colspan => 2} June
+      %th{:colspan => 2} July
+      %th{:colspan => 2} August
+      %th{:colspan => 2} September
+      %th{:colspan => 2} October
+      %th{:colspan => 2} November
+      %th{:colspan => 2} December
+    %tr
+      %td
+      %td
+      %td
+      %td
+      %td Lead
+      %td Backup
+      %td Lead
+      %td Backup
+      %td Lead
+      %td Backup
+      %td Lead
+      %td Backup
+      %td Lead
+      %td Backup
+      %td Lead
+      %td Backup
+      %td Lead
+      %td Backup
+      %td Lead
+      %td Backup
+      %td Lead
+      %td Backup
+      %td Lead
+      %td Backup
+      %td Lead
+      %td Backup
+      %td Lead
+      %td Backup
 
   %tbody
     - @studies.each do |study|
@@ -27,7 +54,29 @@
         %td= study.study_name
         %td= study.lead_manager
         %td= study.backup_manager
-        %td= StudyTask.where(study_id: study.study_id, month: 2).sum(:lead_hours_worked) #%; StudyTask.where(study_id: study.study_id, month: 2).sum(:backup_hours_worked)
-
+        %td= StudyTask.where(study_id: study.study_id, month: 1).sum(:lead_hours_worked)
+        %td= StudyTask.where(study_id: study.study_id, month: 1).sum(:backup_hours_worked)
+        %td= StudyTask.where(study_id: study.study_id, month: 2).sum(:lead_hours_worked)
+        %td= StudyTask.where(study_id: study.study_id, month: 2).sum(:backup_hours_worked)
+        %td= StudyTask.where(study_id: study.study_id, month: 3).sum(:lead_hours_worked)
+        %td= StudyTask.where(study_id: study.study_id, month: 3).sum(:backup_hours_worked)
+        %td= StudyTask.where(study_id: study.study_id, month: 4).sum(:lead_hours_worked)
+        %td= StudyTask.where(study_id: study.study_id, month: 4).sum(:backup_hours_worked)
+        %td= StudyTask.where(study_id: study.study_id, month: 5).sum(:lead_hours_worked)
+        %td= StudyTask.where(study_id: study.study_id, month: 5).sum(:backup_hours_worked)
+        %td= StudyTask.where(study_id: study.study_id, month: 6).sum(:lead_hours_worked)
+        %td= StudyTask.where(study_id: study.study_id, month: 6).sum(:backup_hours_worked)
+        %td= StudyTask.where(study_id: study.study_id, month: 7).sum(:lead_hours_worked)
+        %td= StudyTask.where(study_id: study.study_id, month: 7).sum(:backup_hours_worked)
+        %td= StudyTask.where(study_id: study.study_id, month: 8).sum(:lead_hours_worked)
+        %td= StudyTask.where(study_id: study.study_id, month: 8).sum(:backup_hours_worked)
+        %td= StudyTask.where(study_id: study.study_id, month: 9).sum(:lead_hours_worked)
+        %td= StudyTask.where(study_id: study.study_id, month: 9).sum(:backup_hours_worked)
+        %td= StudyTask.where(study_id: study.study_id, month: 10).sum(:lead_hours_worked)
+        %td= StudyTask.where(study_id: study.study_id, month: 10).sum(:backup_hours_worked)
+        %td= StudyTask.where(study_id: study.study_id, month: 11).sum(:lead_hours_worked)
+        %td= StudyTask.where(study_id: study.study_id, month: 11).sum(:backup_hours_worked)
+        %td= StudyTask.where(study_id: study.study_id, month: 12).sum(:lead_hours_worked)
+        %td= StudyTask.where(study_id: study.study_id, month: 12).sum(:backup_hours_worked)
 
 %br
