--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -4,23 +4,27 @@
   %h1.display-5 Time and Resourcing Data Information System
   %p.lead Made by Team 4.
   %p
-    Getting Study Timelines
+    Getting List of Data Studies
     = link_to 'Click', 'studies'
   %p
     Getting Study Hours Timeline
     = link_to 'Click', 'study_hours_timeline'
     for icons.
     %p
-    Getting Reports
-    = link_to 'Not available yet', 'https://fontawesome.com/icons?d=gallery&m=free'
+    Getting Task List Hours
+    = link_to 'Click', 'task_lists'
     for icons.
     %p
-    Getting Allocation
+    Getting Month Timeline
     = link_to 'Not available yet', 'https://fontawesome.com/icons?d=gallery&m=free'
     for icons.
     %p
     Manage Data Managers
-    = link_to 'Not available yet', 'https://fontawesome.com/icons?d=gallery&m=free'
+    = link_to 'Click', 'data_managers'
+    for icons.
+    %p
+    Getting Data Manager Hours
+    = link_to 'Click', 'manager_hours'
     for icons.
 
 -#.card.mb-3
