Added Month Timeline Page

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -16,7 +16,7 @@
     for icons.
     %p
     Getting Month Timeline
-    = link_to 'Not available yet', 'https://fontawesome.com/icons?d=gallery&m=free'
+    = link_to 'Click', 'month_timeline'
     for icons.
     %p
     Manage Data Managers
