--- a/app/views/study_tasks/index.html.haml
+++ b/app/views/study_tasks/index.html.haml
@@ -28,7 +28,7 @@
         %td= study_task.complete
         %td= link_to 'Show', study_task
         %td= link_to 'Edit', edit_study_task_path(study_task)
-        %td= link_to 'Destroy', study_task, method: :delete, data: { confirm: 'Are you sure?' }
+        -#%td= link_to 'Destroy', study_task, method: :delete, data: { confirm: 'Are you sure?' }
 
 %br
 
