--- a/app/views/studies/_form.html.haml
+++ b/app/views/studies/_form.html.haml
@@ -4,7 +4,7 @@
   = f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present?
 
   .form-inputs
-    = f.input :id
+    = f.input :study_id
     = f.input :study_name
     = f.input :stage
     = f.input :type
@@ -13,6 +13,7 @@
     = f.input :backup_manager
     = f.input :start_date
     = f.input :lplv
+    = f.input :study_finished
 
 
   .form-actions
