--- a/app/views/studies/index.html.haml
+++ b/app/views/studies/index.html.haml
@@ -19,7 +19,6 @@
       %th
       %th
       %th
-      %th
 
   %tbody
     - @studies.each do |study|
@@ -36,8 +35,7 @@
         %td= study.study_finished
         %td= link_to 'Show', study
         %td= link_to 'Edit', edit_study_path(study)
-        -#%td= link_to 'Destroy', study, method: :delete, data: { confirm: 'Are you sure?' }
-        %td= link_to 'Show Tasks', study_tasks_path(StudyTask.where(study_id: study.study_id))
+        %td= link_to 'Tasks', get_tasks_path(study.study_id)
 %br
 
 
