DM views added, some functionalities related to DMs only

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -26,6 +26,10 @@
     Getting Data Manager Hours
     = link_to 'Click', 'manager_hours'
     for icons.
+    %p
+    Getting Data Manager Studies
+    = link_to 'Click', 'dm_studies'
+    for icons.
 
 -#.card.mb-3
 -#  .card-header
