--- a/app/views/studies/index_tasks.html.haml
+++ b/app/views/studies/index_tasks.html.haml
@@ -28,5 +28,7 @@
         %td= study_task.complete
         %td= link_to 'Show', study_task
         %td= link_to 'Edit', edit_study_task_path(study_task)
+        -#%td= link_to 'Hours', hours_management_path(study_task)
+
 
 %br
