as a Data Manager, view your allocated hours

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -30,6 +30,10 @@
     Getting Data Manager Studies
     = link_to 'Click', 'dm_studies'
     for icons.
+    %p
+    Getting Manager Hours per Data Manager
+    = link_to 'Click', 'dm_hours'
+    for icons.
 
 -#.card.mb-3
 -#  .card-header
