Fix Date format, auto_increment fields for studies/tasks, add task functionality, auto fill-in + some esthetic demands from the client feedback

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -4,34 +4,34 @@
   %h1.display-5 Time and Resourcing Data Information System
   %p.lead Made by Team 4.
   %p
-    Getting List of Data Studies
+    As an Admin : Getting Study List
     = link_to 'Click', 'studies'
   %p
-    Getting Study Hours Timeline
+    As an Admin : Getting Study Hours Timeline
     = link_to 'Click', 'study_hours_timeline'
     for icons.
     %p
-    Getting Task List Hours
+    As an Admin : Getting Task List Hours
     = link_to 'Click', 'task_lists'
     for icons.
     %p
-    Getting Month Timeline
+    As an Admin : Getting Month Timeline
     = link_to 'Click', 'month_timeline'
     for icons.
     %p
-    Manage Data Managers
+    As an Admin : Manage Data Managers
     = link_to 'Click', 'data_managers'
     for icons.
     %p
-    Getting Data Manager Hours
+    As an Admin : Getting Data Manager Hours
     = link_to 'Click', 'manager_hours'
     for icons.
     %p
-    Getting Data Manager Studies
+    As a DM : Getting Study List
     = link_to 'Click', 'dm_studies'
     for icons.
     %p
-    Getting Manager Hours per Data Manager
+    As a DM : Getting own hours
     = link_to 'Click', 'dm_hours'
     for icons.
 
