--- a/app/views/studies/show.html.haml
+++ b/app/views/studies/show.html.haml
@@ -12,15 +12,15 @@
   = @study.stage
 %p
   %b Type:
-  = @study.type
+  = @study.type_of
 %p
   %b Notes:
   = @study.notes
 %p
-  %b Lead Manager:
+  %b Lead DM:
   = @study.lead_manager
 %p
-  %b Lead Manager:
+  %b Backup DM:
   = @study.backup_manager
 %p
   %b Start Date:
