--- a/app/views/studies/study_hours_timeline.html.haml
+++ b/app/views/studies/study_hours_timeline.html.haml
@@ -3,8 +3,8 @@
     %tr
       %th ID
       %th Name
-      %th Lead Manager
-      %th Backup Manager
+      %th Lead DM
+      %th Backup DM
       %th{:colspan => 2} January
       %th{:colspan => 2} February
       %th{:colspan => 2} March
