--- a/app/views/study_tasks/show.html.haml
+++ b/app/views/study_tasks/show.html.haml
@@ -10,11 +10,11 @@
   %b Study:
   = @study_task.study_id
 %p
-  %b Backup Hours:
-  = @study_task.backup_hours_worked
-%p
-  %b Lead Hours:
+  %b Lead DM Hours:
   = @study_task.lead_hours_worked
+%p
+  %b Backup DM Hours:
+  = @study_task.backup_hours_worked
 %p
   %b Year :
   = @study_task.year
