--- a/app/views/task_lists/_form.html.haml
+++ b/app/views/task_lists/_form.html.haml
@@ -6,10 +6,10 @@
   .form-inputs
     = f.input :task_name
     = f.input :predicted_hours
-    = f.input :average_hours
-    = f.input :task_counter
-    = f.input :maximum_hours
-    = f.input :minimum_hours
+    -#= f.input :average_hours
+    -#= f.input :task_counter
+    -#= f.input :maximum_hours
+    -#= f.input :minimum_hours
 
 
   .form-actions
