--- a/app/views/studies/index_tasks.html.haml
+++ b/app/views/studies/index_tasks.html.haml
@@ -6,8 +6,8 @@
       %th ID
       %th Name
       %th Study
-      %th Backup Manager Hours
-      %th Lead Hours
+      %th Lead DM Hours
+      %th Backup DM Hours
       %th Year
       %th Month
       %th Complete
@@ -21,8 +21,8 @@
         %td= study_task.task_id
         %td= study_task.task_name
         %td= study_task.study_id
-        %td= study_task.backup_hours_worked
         %td= study_task.lead_hours_worked
+        %td= study_task.backup_hours_worked
         %td= study_task.year
         %td= study_task.month
         %td= study_task.complete
