--- a/app/views/manager_hours/_form.html.haml
+++ b/app/views/manager_hours/_form.html.haml
@@ -4,6 +4,14 @@
   = f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present?
 
   .form-inputs
+    = f.input :email
+    = f.input :available_hours
+    = f.input :allocated_hours
+    = f.input :holiday_hours
+    = f.input :spare_hours
+    = f.input :year
+    = f.input :month
+
 
   .form-actions
     = f.button :submit
