--- a/app/views/studies/index.html.haml
+++ b/app/views/studies/index.html.haml
@@ -41,6 +41,7 @@
         %td= link_to 'Edit', edit_study_path(study)
         %td= link_to 'Tasks', get_tasks_path(study.study_id)
         %td= link_to 'Add Task', add_related_task_path(study.study_id)
+        -#%td= link_to 'Add Hours as Guest', edit_study_path(study)
 %br
 
 
