--- a/app/views/study_tasks/show.html.haml
+++ b/app/views/study_tasks/show.html.haml
@@ -16,6 +16,9 @@
   %b Backup DM Hours:
   = @study_task.backup_hours_worked
 %p
+  %b Guest DM Hours:
+  = @study_task.guest_hours_worked
+%p
   %b Year :
   = @study_task.year
 %p
