--- a/app/views/manager_hours/index.html.haml
+++ b/app/views/manager_hours/index.html.haml
@@ -5,23 +5,33 @@
       %th Data Manager
       %th January
       %th February
-      -#%th March
-      -#%th April
-      -#%th May
-      -#%th June
-      -#%th July
-      -#%th August
-      -#%th September
-      -#%th October
-      -#%th November
-      -#%th December
+      %th March
+      %th April
+      %th May
+      %th June
+      %th July
+      %th August
+      %th September
+      %th October
+      %th November
+      %th December
 
   %tbody
-    - @manager_hours.each do |manager_hour|
+    - @manager_hours.pluck('email').uniq.each do |manager_hour|
       %tr
-        %td= manager_hour.email
-        %td= manager_hour.available_hours
-        %td= manager_hour.available_hours
+        %td= manager_hour
+        %th= ManagerHour.where(year: 2020, month: 1, email: manager_hour).pluck('available_hours').first
+        %th= ManagerHour.where(year: 2020, month: 2, email: manager_hour).pluck('available_hours').first
+        %td= ManagerHour.where(year: 2020, month: 3, email: manager_hour).pluck('available_hours').first
+        %td= ManagerHour.where(year: 2020, month: 4, email: manager_hour).pluck('available_hours').first
+        %td= ManagerHour.where(year: 2020, month: 5, email: manager_hour).pluck('available_hours').first
+        %td= ManagerHour.where(year: 2020, month: 6, email: manager_hour).pluck('available_hours').first
+        %td= ManagerHour.where(year: 2020, month: 7, email: manager_hour).pluck('available_hours').first
+        %td= ManagerHour.where(year: 2020, month: 8, email: manager_hour).pluck('available_hours').first
+        %td= ManagerHour.where(year: 2020, month: 9, email: manager_hour).pluck('available_hours').first
+        %td= ManagerHour.where(year: 2020, month: 10, email: manager_hour).pluck('available_hours').first
+        %td= ManagerHour.where(year: 2020, month: 11, email: manager_hour).pluck('available_hours').first
+        %td= ManagerHour.where(year: 2020, month: 12, email: manager_hour).pluck('available_hours').first
 %br
 
 %h2 Listing Allocated Hours
@@ -31,13 +41,34 @@
       %th Data Manager
       %th January
       %th February
+      %th March
+      %th April
+      %th May
+      %th June
+      %th July
+      %th August
+      %th September
+      %th October
+      %th November
+      %th December
 
   %tbody
-    - @manager_hours.each do |manager_hour|
+    - @manager_hours.pluck('email').uniq.each do |manager_hour|
       %tr
-        %td= manager_hour.email
-        %td= manager_hour.allocated_hours
-        %td= manager_hour.allocated_hours
+        %td= manager_hour
+        %th= ManagerHour.where(year: 2020, month: 1, email: manager_hour).pluck('allocated_hours').first
+        %th= ManagerHour.where(year: 2020, month: 2, email: manager_hour).pluck('allocated_hours').first
+        %th= ManagerHour.where(year: 2020, month: 3, email: manager_hour).pluck('allocated_hours').first
+        %th= ManagerHour.where(year: 2020, month: 4, email: manager_hour).pluck('allocated_hours').first
+        %th= ManagerHour.where(year: 2020, month: 5, email: manager_hour).pluck('allocated_hours').first
+        %th= ManagerHour.where(year: 2020, month: 6, email: manager_hour).pluck('allocated_hours').first
+        %th= ManagerHour.where(year: 2020, month: 7, email: manager_hour).pluck('allocated_hours').first
+        %th= ManagerHour.where(year: 2020, month: 8, email: manager_hour).pluck('allocated_hours').first
+        %th= ManagerHour.where(year: 2020, month: 9, email: manager_hour).pluck('allocated_hours').first
+        %th= ManagerHour.where(year: 2020, month: 10, email: manager_hour).pluck('allocated_hours').first
+        %th= ManagerHour.where(year: 2020, month: 11, email: manager_hour).pluck('allocated_hours').first
+        %th= ManagerHour.where(year: 2020, month: 12, email: manager_hour).pluck('allocated_hours').first
+
 %br
 
 %h2 Listing Spare Hours
@@ -47,13 +78,34 @@
       %th Data Manager
       %th January
       %th February
+      %th March
+      %th April
+      %th May
+      %th June
+      %th July
+      %th August
+      %th September
+      %th October
+      %th November
+      %th December
 
   %tbody
-    - @manager_hours.each do |manager_hour|
+    - @manager_hours.pluck('email').uniq.each do |manager_hour|
       %tr
-        %td= manager_hour.email
-        %td= manager_hour.spare_hours
-        %td= manager_hour.spare_hours
+        %td= manager_hour
+        %th= ManagerHour.where(year: 2020, month: 1, email: manager_hour).pluck('spare_hours').first
+        %th= ManagerHour.where(year: 2020, month: 2, email: manager_hour).pluck('spare_hours').first
+        %th= ManagerHour.where(year: 2020, month: 3, email: manager_hour).pluck('spare_hours').first
+        %th= ManagerHour.where(year: 2020, month: 4, email: manager_hour).pluck('spare_hours').first
+        %th= ManagerHour.where(year: 2020, month: 5, email: manager_hour).pluck('spare_hours').first
+        %th= ManagerHour.where(year: 2020, month: 6, email: manager_hour).pluck('spare_hours').first
+        %th= ManagerHour.where(year: 2020, month: 7, email: manager_hour).pluck('spare_hours').first
+        %th= ManagerHour.where(year: 2020, month: 8, email: manager_hour).pluck('spare_hours').first
+        %th= ManagerHour.where(year: 2020, month: 9, email: manager_hour).pluck('spare_hours').first
+        %th= ManagerHour.where(year: 2020, month: 10, email: manager_hour).pluck('spare_hours').first
+        %th= ManagerHour.where(year: 2020, month: 11, email: manager_hour).pluck('spare_hours').first
+        %th= ManagerHour.where(year: 2020, month: 12, email: manager_hour).pluck('spare_hours').first
+
 %br
 
 %h2 Listing Holiday Hours
@@ -63,13 +115,34 @@
       %th Data Manager
       %th January
       %th February
+      %th March
+      %th April
+      %th May
+      %th June
+      %th July
+      %th August
+      %th September
+      %th October
+      %th November
+      %th December
 
   %tbody
-    - @manager_hours.each do |manager_hour|
+    - @manager_hours.pluck('email').uniq.each do |manager_hour|
       %tr
-        %td= manager_hour.email
-        %td= manager_hour.holiday_hours
-        %td= manager_hour.holiday_hours
+        %td= manager_hour
+        %th= ManagerHour.where(year: 2020, month: 1, email: manager_hour).pluck('holiday_hours').first
+        %th= ManagerHour.where(year: 2020, month: 2, email: manager_hour).pluck('holiday_hours').first
+        %th= ManagerHour.where(year: 2020, month: 3, email: manager_hour).pluck('holiday_hours').first
+        %th= ManagerHour.where(year: 2020, month: 4, email: manager_hour).pluck('holiday_hours').first
+        %th= ManagerHour.where(year: 2020, month: 5, email: manager_hour).pluck('holiday_hours').first
+        %th= ManagerHour.where(year: 2020, month: 6, email: manager_hour).pluck('holiday_hours').first
+        %th= ManagerHour.where(year: 2020, month: 7, email: manager_hour).pluck('holiday_hours').first
+        %th= ManagerHour.where(year: 2020, month: 8, email: manager_hour).pluck('holiday_hours').first
+        %th= ManagerHour.where(year: 2020, month: 9, email: manager_hour).pluck('holiday_hours').first
+        %th= ManagerHour.where(year: 2020, month: 10, email: manager_hour).pluck('holiday_hours').first
+        %th= ManagerHour.where(year: 2020, month: 11, email: manager_hour).pluck('holiday_hours').first
+        %th= ManagerHour.where(year: 2020, month: 12, email: manager_hour).pluck('holiday_hours').first
+
 %br
 
 = link_to 'New Manager hour', new_manager_hour_path
