--- a/app/views/study_tasks/_form.html.haml
+++ b/app/views/study_tasks/_form.html.haml
@@ -15,8 +15,7 @@
     - elsif (current_user.email == Study.where(study_id: @study_task.study_id).pluck(:backup_manager).first)
       = f.input :backup_hours_worked
     - else
-      = f.input :year
-      = f.input :month
+      = f.input :guest_hours_worked
 
     .form-actions
       = f.button :submit
