--- a/app/views/study_tasks/_guest_hours.html.haml
+++ b/app/views/study_tasks/_guest_hours.html.haml
@@ -1,14 +1,16 @@
 -# frozen_string_literal: true
-= simple_form_for(@user, url: new_user_path) do |f|
+= simple_form_for(@study_task) do |f|
   = f.error_notification
   = f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present?
 
   .form-inputs
-    = f.input :id
-    = f.input :email
-    = f.input :username
-    = f.input :password
-    = f.input :admin
+    = f.input :study_id
+    = f.input :task_name
+    = f.input :guest_hours_worked
+    = f.input :complete
+
+
+
 
 
   .form-actions
