--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -5,26 +5,26 @@
     %h1.display-5 Time and Resourcing Data Information System
     %p.lead Made by Team 4.
     %p
-      As an Admin : Getting Study List
+      View Study List
       = link_to 'Click', 'studies'
     %p
-      As an Admin : Getting Study Hours Timeline
+      View Lead & Backup DM Hours Per Month
       = link_to 'Click', 'study_hours_timeline'
       for icons.
       %p
-      As an Admin : Getting Task List Hours
+      View Available Tasks & Details
       = link_to 'Click', 'task_lists'
       for icons.
       %p
-      As an Admin : Getting Month Timeline
+      View Month Timeline For All Studies
       = link_to 'Click', 'month_timeline'
       for icons.
       %p
-      As an Admin : Manage Data Managers
+      Manage All Data Managers
       = link_to 'Click', 'data_managers'
       for icons.
       %p
-      As an Admin : Getting Data Manager Hours
+      View Data Manager Working Hours
       = link_to 'Click', 'manager_hours'
       for icons.
 - else
