Formating tables for data manager hours and studies

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -55,7 +55,7 @@
                         = icon 'fas', 'sign-out-alt', 'Log out'
 
       %main
-        #main-container.container
+        #main-container
           = yield
 
     %footer#footer
