--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -2,7 +2,9 @@
 
 html,body {
   height: 100%;
+  font-family: 'Merriweather';
 }
+
 
 #wrap {
   position: relative;
@@ -14,6 +16,7 @@ html,body {
 
 #main-container {
   padding-top: 70px;
+  padding-left: 0px;
 }
 
 #footer {
