--- a/app/views/manager_hours/dm_hours.haml
+++ b/app/views/manager_hours/dm_hours.haml
@@ -1,43 +1,43 @@
-%h1 Listing manager_hours
+.grouping
 
-%table
-  %thead
-    %tr
-      %th Data Manager
-      %th{:colspan => 4} January
-      %th{:colspan => 4} February
-      -#%th{:colspan => 4} March
-      -#%th{:colspan => 4} April
-      -#%th{:colspan => 4} May
-      -#%th{:colspan => 4} June
-      -#%th{:colspan => 4} July
-      -#%th{:colspan => 4} August
-      -#%th{:colspan => 4} September
-      -#%th{:colspan => 4} October
-      -#%th{:colspan => 4} November
-      -#%th{:colspan => 4} December
+  %h1 Listing manager_hours
 
-    %tr
-      %th
-      %th Available Hours
-      %th Allocated Hours
-      %th Holiday Hours
-      %th Spare Hours
-      %th Available Hours
-      %th Allocated Hours
-      %th Holiday Hours
-      %th Spare Hours
+  .scrollable
+    %table.table.table-bordered
+      %thead
+        %tr
+          %th Data Manager
+          %th{:colspan => 4} January
+          %th{:colspan => 4} February
+          %th{:colspan => 4} March
+          %th{:colspan => 4} April
+          %th{:colspan => 4} May
+          %th{:colspan => 4} June
+          %th{:colspan => 4} July
+          %th{:colspan => 4} August
+          %th{:colspan => 4} September
+          %th{:colspan => 4} October
+          %th{:colspan => 4} November
+          %th{:colspan => 4} December
+
+        %tr
+          %th
+            - 12.times do
+              %th Available
+              %th Allocated
+              %th Holiday
+              %th Spare
 
 
-  %tbody
-    - @manager_hours.each do |manager_hour|
-      %tr
-        %td= manager_hour.email
-        %td= manager_hour.available_hours
-        %td= manager_hour.allocated_hours
-        %td= manager_hour.holiday_hours
-        %td= manager_hour.spare_hours
+      %tbody
+        - @manager_hours.each do |manager_hour|
+          %tr
+            %td= manager_hour.email
+            %td= manager_hour.available_hours
+            %td= manager_hour.allocated_hours
+            %td= manager_hour.holiday_hours
+            %td= manager_hour.spare_hours
 
-%br
+  %br
 
-= link_to 'New Manager hour', new_manager_hour_path
+  = link_to 'New Manager hour', new_manager_hour_path
